Cleanup of folder structure and gitignore for clarity

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-*.log
-*.png
-*.docx
-*.rtf
-._*.do
-*.DS_Store
-*.dta 
-.Rproj.user
-scripts/_archive/
-*.xlsx
-*.csv
-*.rds
+# Ignore EVERYTHING
+*
+
+# Exceptions (Track these)
+!.gitignore
+!README.md
+!1_data_intake.R
+!2_data_prep_v2.qmd
+!3_working_paper_outputs_10hrs.qmd
+!3_working_paper_outputs.qmd
